Fixed navbar, added error handling for log-in, added visibility for password in login

--- a/cardinal-quantify/src/styles/Login.css
+++ b/cardinal-quantify/src/styles/Login.css
@@ -4,7 +4,9 @@
     font-family:Arial, Helvetica, sans-serif;
 }
 
-body{
+
+
+.login-wrapper{
     display:flex;
     justify-content: center;
     align-items: center;
@@ -12,16 +14,24 @@ body{
     background-color: #434343; 
     overflow: scroll;
 }
-
 .wrapper{
     position: relative;
     width: 600px;
     height: auto;
+    align-items: center;
     padding:30px 0 0 10px;
 
-    
-
 }
+.error-message{
+    background-color: #CC413A;
+    color:white;
+    text-align:center;
+    width:300px;
+    margin:auto;
+    padding:15px;
+    font-size:15px;
+}
+
 
 .form-wrapper{
     display:flex;
@@ -29,6 +39,7 @@ body{
     align-items: center;
     height: 100%;
     width:100%;
+    margin-top:30px;
 
 }
 
@@ -73,7 +84,7 @@ img{
    top: -5px;
 }
 
-button{
+.button{
     position:relative;
     width: 100%;
     height: 40px;
@@ -84,12 +95,12 @@ button{
 
 }
 
-button:hover{
+.button:hover{
     background:white;
     color:#434343;
 }
 
-button:active{
+.button:active{
     background: #C473D4;
     color:white;
     transition:1s;
