--- a/cardinal-quantify/src/styles/Signup.css
+++ b/cardinal-quantify/src/styles/Signup.css
@@ -4,7 +4,7 @@
     font-family:Arial, Helvetica, sans-serif;
 }
 
-body{
+.register-wrapper{
     display:flex;
     justify-content: center;
     align-items: center;
@@ -18,9 +18,6 @@ body{
     width: 600px;
     height: auto;
     padding:30px 0 0 10px;
-
-    
-
 }
 
 .form-wrapper{
@@ -72,7 +69,7 @@ img{
    top: -5px;
 }
 
-button{
+.button{
     position:relative;
     width: 100%;
     height: 40px;
@@ -83,12 +80,12 @@ button{
 
 }
 
-button:hover{
+.button:hover{
     background:white;
     color:#434343;
 }
 
-button:active{
+.button:active{
     background: #C473D4;
     color:white;
     transition:1s;
